k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devicestatus
  labels:
    name: devicestatus
    environment: production
