k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devicestatus-service
  namespace: devicestatus
  labels:
    app: devicestatus-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: devicestatus-app
